scroll bar clipping fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,18 @@
 
 body
 {
-  margin:0;
+
   text-align: center;
   /* go here to get embed fonts */
   /* https://fonts.google.com/ */
   font-family: 'Merriweather', serif;
 
 
-  overflow: hidden;
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: hidden;
 }
 
 
@@ -140,7 +144,6 @@ margin-left: 10px;
     background-color: #dbf2f1;
     position: relative;
     padding-top: 50px;
-    overflow:hidden;
 
 }
 .middle-container
